# derive-new

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
derive-new/: Cargo.toml
derive-new-test/: Cargo.toml
derive-new-test/src/: main.rs
derive-new/src/: lib.rs
derive-new/tests/: test.rs
src/: lib.rs
testcrate/: Cargo.toml
testcrate/tests/: compile-fail.rs
testcrate/tests/compile-fail/: enum-with-discriminants.rs  enum-zero-variants.rs  multiple-new-attrs.rs  new-invalid-attr-type.rs  new-invalid-value.rs  new-list-invalid.rs  new-name-value-invalid.rs  new-nested-list.rs  new-nested-literal.rs  new-non-literal-value.rs
tests/: compile-test.rs  test.rs
tests/compile-fail/: enum-zero-variants.rs  new-invalid-value.rs  new-name-value-invalid.rs  new-non-literal-value.rs
