[package]
name = "derive-new"
version = "0.7.0"
authors = ["Nick Cameron <nrc@ncameron.org>"]
description = "`#[derive(new)]` implements simple constructor functions for structs and enums."
license = "MIT"
repository = "https://github.com/nrc/derive-new"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = {version = "2", features = ["parsing"]}

[features]
default = ["std"]
std = []

[workspace]
members = ["testcrate"]
