[package]
name = "derive-new"
version = "0.1.1"
authors = ["Nick Cameron <ncameron@mozilla.com>"]
description = "WIP!\n`#[derive(new)]`\n Implements simple constructor functions for structs."
license = "MIT"
repository = "https://github.com/nrc/derive-new"

[lib]
rustc-macro = true

[dependencies]
syn = "0.8"
quote = "0.2"
