[package]
name = "derive-new"
version = "0.1.3"
authors = ["Nick Cameron <ncameron@mozilla.com>"]
description = "WIP! `#[derive(new)]` implements simple constructor functions for structs."
license = "MIT"
repository = "https://github.com/nrc/derive-new"

[lib]
proc-macro = true

[dependencies]
syn = "0.8"
quote = "0.2"
