[package]
name = "testcrate"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
derive-new = { path = ".." }

[dev-dependencies]
compiletest_rs = { version = "0.3.10", features = ["stable"] }

[[test]]
name = "compile-fail"
path = "tests/compile-fail.rs"
harness = false
