[package]
name = "testcrate"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2021"

[dependencies]
derive-new = { path = ".." }

[dev-dependencies]
compiletest_rs = { version = "0.11", features = ["stable"] }

[[test]]
name = "compile-fail"
path = "tests/compile-fail.rs"
harness = false
